<resources>
    <string name="app_name">N-Wrappy-DEV</string>
    <string name="please_enter_5_bit_verification_code">Please enter 5 bit verification code</string>
    <string name="please_input_the_phone_number">Please input the phone number</string>
    <string name="please_input_the_sns_code">Please input the SNS code</string>
    <string name="email_address_cannot_be_empty">Email address cannot be empty</string>
    <string name="email_address_format_not_correct">Email address format not correct</string>
    <string name="request_failed">Request failed, please request again</string>
    <string name="cannot_be_empty">cannot be empty</string>
    <string name="update_question_and_answer">Update Question And Answer</string>
    <string name="account_verification">Account Verification</string>
    <string name="modify_your_phone_number">Modify your phone number</string>
    <string name="modify_your_email">Modify your email</string>
    <string name="Profile">Profile</string>
    <string name="forgot_password">ForgetPassword</string>
    <string name="illegal_email">Illegal email</string>
    <string name="please_input_the_correct_cell_phone_number">Phone number format not correct</string>
    <string name="StartMessaging">START MESSAGING</string>
    <string name="create_an_account">Register</string>
    <string name="action_done">Done</string>
    <string name="next">Next</string>
    <string name="lock_screen_confirm_passphrase">Confirm password</string>
    <string name="lock_screen_confirm_passphrase_two">Input confirm password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="add_people">Add People</string>
    <string name="User_ID_cannot_be_empty">User ID cannot be empty</string>
    <string name="check_User_ID_format_letters_numbers_beginning_with_letters"> Check User ID format, 6-30 letters, numbers, beginning with letters</string>
    <string name="Page1Titlenull"></string>
    <string name="Page1Title">Wrappy</string>
    <string name="Page2Title">Free</string>
    <string name="Page3Title">Cloud</string>
    <string name="Page4Title">Secure</string>
    <string name="Page5Title">Magic</string>
    <string name="Page6Title">Powerful</string>
    <string name="Page7Title">Fast</string>
    <string name="Page8Title">Privacy</string>
    <string name="Page9Title">Ecology</string>
    <string name="Page10Title">Borderless</string>
    <string name="Page11Title">Revolution</string>
    <string name="Page1Message">Flattening the World.\nThis is the next-generation SNS platform.</string>
    <string name="Page2Message">Wrappy is free to use voice calls,\nvideo calls, TV conferences....</string>
    <string name="Page3Message">Wrappy allows you to access your messages from multiple devices.</string>
    <string name="Page4Message">Your messages are 100% encrypted and can be self-destructed</string>
    <string name="Page5Message">You can easily send and receive currencies from friends and family.</string>
    <string name="Page6Message">Unlimited storage for your media data\nand chat records!</string>
    <string name="Page7Message">You can send and receive messages instantly</string>
    <string name="Page8Message">You can delete your history at all times.</string>
    <string name="Page9Message">A simple cryptocurrency ecosystem</string>
    <string name="Page10Message">Currencies can be used anywhere,\nfrom any country.</string>
    <string name="Page11Message">A pioneer in an innovative\n&amp; constantly evolving era.</string>
    <string name="Forget_username">Forget username ?</string>
    <string name="id_or_username">User ID</string>
    <string name="forget_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="waiting_dialog">Waiting…</string>
    <string name="search_username">Search username</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="title_activity_wallet__complete_">Wallet_Complete_Activity</string>
    <string name="title_create_new_wallet">Create New Wallet</string>
    <string name="title_new_wallet_created">New Wallet Created</string>
    <string name="title_wallet_address">Wallet Address</string>
    <string name="title_backup_wallet">Back Up Wallet</string>
    <string name="title_change_password_wallet">Change Password</string>
    <string name="alert_password_wallet">This password encrypts your private key. This does not act as a seed to generate your keys. You will need <b>this password</b> and <b>your private key</b> to unlock your wallet.</string>
    <string name="sub_title_wallet_dialog">Please enter your wallet password for backup</string>
    <string name="btn_save_qr_wallet">Save QR Wallet</string>
    <string name="translate_to">Translate to</string>
    <string name="turn_off_translate">Off</string>
    <string name="pin_to_top">Pin to top</string>
    <string name="unpin_from_top">Unpin from top</string>
    <string name="delete_and_exit">Delete and exit</string>
    <string name="clean_history">Clean history</string>
    <string name="setting_screen">Setting</string>
    <string name="setting_search">Search</string>
    <string name="setting_clear">Clear history</string>
    <string name="setting_delete_and_leave_group">Delete and leave group</string>
    <string name="setting_leave_group">Leave group</string>
    <string name="setting_delete_chat">Delete chat</string>
    <string name="setting_report_spam">Report spam</string>
    <string name="setting_notification">Notifications</string>
    <string name="setting_change_background">Change background</string>
    <string name="setting_add_member">Add friend</string>
    <string name="incoming_attachment">1 attachment</string>
    <string name="title_wallet">Wallet</string>
    <string name="ETH">Ethereum</string>
    <string name="PRO">Proteusion</string>
    <string name="seetranslate">See translate</string>
    <string name="closetranslate">Close translate</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_violence">Violence</string>
    <string name="menu_cancel">Cancel</string>
    <string name="error_repeat_password">Repeat Password mismatch</string>
    <string name="message_enter_password">Enter a password</string>
    <string name="old_password_mismatch">Old Password mismatch</string>
    <string name="message_change_password_success">Change Password successful</string>
    <string name="backup_success">Backup Successfully</string>
    <string name="delete_success">Delete Successfully</string>
    <string name="message_fail_import">Failed to import , please try again</string>
    <string name="backup">BACKUP</string>
    <string name="title_member_group_setting">Member</string>
    <string name="old_password_title">Old password</string>
    <string name="new_password_title">New password</string>
    <string name="repeat_password_title">Repeat new password</string>
    <string name="available_balance">Available Balance</string>
    <string name="to_address">available_balance</string>
    <string name="amount">AMOUNT</string>
    <string name="eth_unit">ETH</string>
    <string name="USD">USD</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="confirmations">Confirmations</string>
    <string name="view_more">VIEW MORE</string>
    <string name="wallet_created_success">WALLET CREATED SUCCESSFULLY</string>
    <string name="warning_backup_wallet">We highly recommend you backup the Wallet or keystore immediately.</string>
    <string name="backup_now_button">BACKUP NOW</string>
    <string name="no_thanks">NO, THANKS</string>
    <string name="copy_clipboard">Copy To Clipboard</string>
    <string name="backup_address">Back up address</string>
    <string name="welcome_wallet_title">WELCOME TO WALLET</string>
    <string name="import_keystore">Import Keystore</string>
    <string name="three_dots">…</string>
    <string name="ringing">Calling………</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="add_new_list">Add new list</string>
    <string name="new_list">New list</string>
    <string name="key_manager">Key Manager</string>
    <string name="add_another_account">Add Another Account</string>
    <string name="check_email_passcode">Please check your messages\nand enter the passcode</string>
    <string name="welcome">Welcome to Wrappy \nEnjoy Wrappy</string>
    <string name="vertify_title_noti">Please input your phone number here</string>
    <string name="please_input_your_new_email">Please input your new email</string>
    <string name="send_again">Resend passcode</string>
    <string name="answer_secret_question">Answer your secret question</string>
    <string name="Chose_your_security_question">Choose your security question</string>
    <string name="Question1">Question1</string>
    <string name="Question2">Question2</string>
    <string name="your_answer">Your Answer</string>
    <string name="btn_next">Next</string>
    <string name="input_your_email">Enter your email address to reset password</string>
    <string name="hint_your_email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_group">New Group</string>
    <string name="about_us">About us</string>
    <string name="please_enter_the_email_and_cell_phone_number">Please enter the Email and cell phone number</string>
    <string name="send_recovery_email_hit">Please enter the email address provided when you register, The system will send an email to your email address, then enter your email address, copy the link to open in your mobile browser, jump to the app and complete the reset password </string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="remove">Remove</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="all">All</string>
    <string name="username_">User ID*</string>
    <string name="username">User ID</string>
    <string name="input_your_registered_email_address">Input your registered email address</string>
    <string name="email">Email</string>
    <string name="email_l">Email :</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="phone">phone</string>
    <string name="gender">Gender</string>
    <string name="referral">Referral</string>
    <string name="referral_hint">Referral code</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_update">Update</string>
    <string name="cancel_update">Cancel</string>
    <string name="hint_answer">Answer</string>
    <string name="choose_secret_question">Choose your security question</string>
    <string name="choose_new_secret_question">Choose your new secret question</string>
    <string name="skip">SKIP</string>
    <string name="complete">COMPLETE</string>
    <string name="current_balance">Current Balance</string>
    <string name="add_photo">Add Photo!</string>
    <string name="error_upload_photo">Upload group photo fail!</string>
    <string name="error_creating_group">Create Group Fail</string>
    <string name="select_file_to_send">Select File</string>
    <string name="google_play_services_not_available">Google Play Services is not available.</string>
    <string name="english">English</string>
    <string name="copied_text">Copied Text</string>
    <string name="history">HISTORY</string>
    <string name="activity">Activity</string>
    <string name="email_tile">Email</string>
    <string name="create_new_username">Create a User ID</string>
    <string name="create_new_password">Create a password</string>
    <string name="input_your_confidential_info">Input Your Confidential Info</string>
    <string name="input_your_password">Input your password</string>
    <string name="input_username">Input your User ID</string>
    <string name="forget_passcode">Forget Password</string>
</resources>