<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <include layout="@layout/layout_title"/>

    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/send_recovery_email_hit"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/AppText04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_tile" />

                <!--android:text="214811896@qq.com"-->
            <EditText
                android:id="@+id/edProfileEmail"
                android:singleLine="true"
                android:nextFocusForward="@id/edProfilePhone"
                android:layout_marginLeft="20dp"
                style="@style/AppText02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_your_registered_email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColorHint="#bebebe"
                android:textSize="14sp" />
        </LinearLayout>


        <View
            android:visibility="gone"
            style="@style/divider"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:visibility="gone"
            android:id="@+id/txtProfileMobile"
            style="@style/AppText03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_phone" />

        <View
            android:visibility="gone"
            style="@style/divider"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />




    </LinearLayout>

    <Button
        android:id="@+id/btnProfileComplete"
        android:layout_margin="20dp"
        style="@style/AppButton_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_done" />
</LinearLayout>