<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        style="@style/AppText_Default_Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/check_email_passcode" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/txt_pin_entry"
        app:pinBackground="@drawable/bg_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:pinWidth="40dp"
        app:pinHeight="40dp"
        app:pinLength="5"
        app:cursorVisible="true"
        app:forceKeyboard="true"
        app:hint="0"
        app:inputType="number"
        app:password="false"/>

    <Button
        android:id="@+id/btnVerifyCheck"
        style="@style/AppButton_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/action_done" />
    <TextView
        android:id="@+id/btnSendCodeAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/send_again"
        android:textColor="#444344"
        android:textSize="14sp" />


</LinearLayout>