<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/layout_title"/>

            <TextView
                android:id="@+id/tile_input_password_page"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/input_your_confidential_info"
                android:textColor="#979797"
                android:textSize="17sp" />

            <TextView
                style="@style/AppText02"
                android:id="@+id/title_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/alert_password_wallet_background"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/create_new_username"
                android:textColor="#232323"/>

            <EditText
                android:id="@+id/edtusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/input_username"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:textColor="#232323"
                android:textSize="14sp" />
            <TextView
                style="@style/AppText02"
                android:id="@+id/title_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/alert_password_wallet_background"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/create_new_password"
                android:textColor="#232323"/>

            <EditText
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableRight="@mipmap/ic_hidden"
                android:ems="10"
                android:hint="@string/input_your_password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:textColor="#232323"
                android:textSize="14sp" />

            <TextView
                style="@style/AppText02"
                android:id="@+id/title_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/alert_password_wallet_background"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/lock_screen_confirm_passphrase"
                android:textColor="#232323"/>

            <EditText
                android:id="@+id/edtconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@android:color/transparent"
                android:drawableRight="@mipmap/ic_hidden"
                android:ems="10"
                android:hint="@string/lock_screen_confirm_passphrase"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:textColor="#232323"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="#d4d4d4" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btcreatepassword"
                    style="@style/AppButton_OK"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/btn_next"
                    android:textColor="#fff" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
