<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/AppText03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_tile" />

        <View
            style="@style/divider"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edProfileEmail"
            style="@style/AppText02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColorHint="#bebebe"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtProfileMobile"
            style="@style/AppText03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_phone" />

        <View
            style="@style/divider"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spnProfileCountryCodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edProfilePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:hint="@string/mobile_phone"
                android:imeOptions="actionNext"
                style="@style/EditText_Phone"
                android:textColorHint="#bebebe"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnProfileComplete"
        android:layout_margin="20dp"
        style="@style/AppButton_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_done" />
</LinearLayout>