<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/txtSecurityQuestionTitle"
        style="@style/AppText02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/answer_secret_question"
        android:textColor="#979797"/>

    <TextView
        android:id="@+id/txtSecurityForgetQuestion01"
        style="@style/AppText02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#f2f2f2"
        android:maxLines="3"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/edSecurityForgetQuestion01"
        style="@style/AppText02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:hint="@string/your_answer"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/txtSecurityForgetQuestion02"
        style="@style/AppText02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:maxLines="3"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/edSecurityForgetQuestion02"
        style="@style/AppText02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:hint="@string/your_answer"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:padding="16dp"/>

    <Button
        android:id="@+id/btnForgetPasswordQuestion"
        style="@style/AppButton_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_next"/>

</LinearLayout>