<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/lnVerifyContainer"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <include layout="@layout/layout_title"/>

    <TextView
        style="@style/AppText_Default_Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/vertify_title_noti"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edVerifyPhone"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:nextFocusForward="@id/txt_pin_entry"
            style="@style/EditText_Phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:minWidth="100dp"
            android:textColor="#007aff"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/sendCode"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="SEND"
            android:textColor="#fff"/>

    </LinearLayout>


    <TextView
        style="@style/AppText_Default_Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/check_email_passcode"/>

    <com.goodiebag.pinview.Pinview
        android:id="@+id/txt_pin_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cursorVisible="true"
        app:forceKeyboard="true"
        app:hint="0"
        app:inputType="number"
        app:password="false"
        app:pinBackground="@drawable/bg_passcode"
        app:pinHeight="40dp"
        app:pinLength="5"
        app:pinWidth="40dp"/>

    <Button
        android:id="@+id/btnVerifyCheck"
        style="@style/AppButton_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/action_done"/>

</LinearLayout>