<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_title"/>
        <TextView
            android:text="@string/input_your_password"
            android:id="@+id/tvCountdownTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textColor="@color/text_black_color"
            android:textSize="17sp"/>
            <!--android:textColor="#979797"-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#f2f2f2">

            <EditText
                android:text="Fbu2)3V-UV*JXWWLj@8r"
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/background_text_with_line"
                android:drawableLeft="@mipmap/ic_lock_1"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/ic_hidden"
                android:ems="10"
                android:hint="@string/input_your_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="#232323"
                android:textSize="14sp"/>
        </FrameLayout>


        <LinearLayout
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnlogin"
                style="@style/AppButton_OK"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="25dp"
                android:text="@string/btn_next"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/btnforgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/forget_passcode"
                android:textColor="#979797"
                android:textSize="17sp"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
